# voxa

./: .env.example  .gitignore  .gitleaks.toml  .npmignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  package.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: publish-npm.yml  publish-pypi.yml
docs/: RUNNING.md
scripts/: make_sounds.py  make_voice_samples.py  print_qr.py  serve.sh  smoke_hook.py  voxa
server/: apns.py  app.py  approvals.py  ax_controller.py  call_manager.py  claude_controller.py  cli.py  config.py  cost.py  danger.py  device_registry.py  gemini_operator.py  git_ops.py  greetings.py  history.py  hook_routes.py  hooks.py  jsonl_log.py  machine_id.py  machine_registry.py  machine_routes.py  notifier.py  notify_rules.py  observability.py  orchestrator.py  prewarm.py  push_routes.py  relay_client.py  remote_operator.py  ring_policy.py  screenshot.py  session.py  session_hub.py  session_state.py  task_queue.py  terminal_watcher.py  terminals.py  tmux_controller.py  transcript_monitor.py  transcripts.py  (+1 more)
static/: app.js  index.html  pcm-worklet.js  pro.html  pro2.html
tests/: conftest.py  test_apns.py  test_app.py  test_approvals.py  test_ax_controller.py  test_call_manager.py  test_claude_controller.py  test_close_terminal.py  test_config.py  test_cost.py  test_danger.py  test_device_registry.py  test_gemini_operator.py  test_git_ops.py  test_greetings.py  test_history.py  test_hook_ring_latency.py  test_hooks.py  test_jsonl_log.py  test_machine_id.py  test_machine_registry.py  test_machine_routes.py  test_multi_session.py  test_notifier.py  test_notify_machine.py  test_notify_rules.py  test_observability.py  test_operator_factory.py  test_orchestrator.py  test_prewarm.py  test_print_qr.py  test_prompt_eval.py  test_push_routes.py  test_relay_client.py  test_remote_operator.py  test_ring_policy.py  test_screenshot.py  test_session.py  test_session_hub.py  test_session_state.py  (+7 more)
